samo lista unazad - popraviti

--- a/index.html
+++ b/index.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" >
     <title>Document</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="image fade">
+            <img src="images/2020-Chevrolet-Camaro-ZL1-jump.jpg">
+        </div>
+        <div class="image fade">
+            <img src="images/2020-Ford-Mustang-Shelby-GT500-front-three-quarter.webp">
+        </div>
+        <div class="image fade">
+            <img src="images/2021-dodge-challenger-hellcat-overhead.webp">
+        </div>
+        <div class="image fade">
+            <img src="images/214586_bat-car-batman-arkham-knight-wallpapers-hd_1920x1200_h.webp">
+        </div>
+        <div class="image fade">
+            <img src="images/Forza-Horizon-5-Series-4-includes-new-Chinese-cars-Horizon-World-Cup.jpg">
+        </div>
+        <div class="image fade">
+            <img src="images/most-expensive-new-cars-ever.webp">
+        </div>
+        <div class="image fade">
+            <img src="images/sfsf6deZjV9DRzTSR8VT6A-970-80.jpg.webp">
+        </div>
+
+        <a id ="prev" onclick="show_slide(-1)">&#10094;</a>
+        <a id ="next" onclick="show_slide(-1)">&#10095;</a>
     
+        <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+    </div>
+        <script src = "script.js"></script>
 </body>
 </html>
