--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <a id ="prev" onclick="show_slide(-1)">&#10094;</a>
-        <a id ="next" onclick="show_slide(-1)">&#10095;</a>
+        <a id ="next" onclick="show_slide(+1)">&#10095;</a>
     
         <div class="dots">
             <span class="dot"></span>
